--- a/index.html
+++ b/index.html
@@ -1,15 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
 
-    <title>Document</title>
-    
+    <title>STRIPE</title>
+
 </head>
+
 <body>
-    
+    <header>
+        <nav class="nav1">
+            <a class="logo" href="index.html">
+                <img src="/images/stripe-logo.png" alt="logo">
+            </a>
+            <ul>
+                <li><a href="features">Features</a></li>
+                <li><a href="pricing">Pricing</a></li>
+                <li><a href="more">More</a></li>
+            </ul>
+        </nav>
+        <nav class="nav2">
+            <ul>
+                <li><a href="documentation">Documentation</a></li>
+                <li><a href="help & support">Help & support</a></li>
+                <li><a id="sign" href="sign in">Sign in</a></li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <main>
+        <section>
+            <h1>Checkout</h1>
+            <p>A beautiful optimized, cross devices payment form, with support for single click payments.</p>
+            <a href="explore checkout">Explore checkout</a>
+            <a href="documentation">Documentation</a>
+        </section>
+
+        <section>
+            <img src="/images/iPhoneX_Light.png" alt="smartphone_light">
+            <img src="/images/iPhoneX_Light_2.png" alt="smartphone_light2">
+            <img src="/images/iPhoneX_Dark.png" alt="smartphone_dark">
+        </section>
+    </main>
+
+    <footer>
+        <a href="index.html">
+            <img src="/images/stripe-logo.png" alt="logo">
+        </a>
+
+        <nav>
+            <ul>
+                <li><a href="documentation">Documentation</a></li>
+                <li><a href="help & support">Help & support</a></li>
+            </ul>
+        </nav>
+    </footer>
+
 </body>
+
 </html>
