--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-    <header>
-        <nav class="nav1">
-            <a class="logo" href="index.html">
-                <img src="/images/stripe-logo.png" alt="logo">
+    <header class="container">
+        <nav class="nav-left">
+            <a href="index.html">
+                <img class="logo"  src="/images/stripe-logo.png" alt="logo">
             </a>
             <ul>
                 <li><a href="features">Features</a></li>
@@ -23,32 +23,32 @@
                 <li><a href="more">More</a></li>
             </ul>
         </nav>
-        <nav class="nav2">
+        <nav class="nav-right">
             <ul>
                 <li><a href="documentation">Documentation</a></li>
                 <li><a href="help & support">Help & support</a></li>
-                <li><a id="sign" href="sign in">Sign in</a></li>
+                <li><a href="sign in" class="button-light">Sign in</a></li>
             </ul>
         </nav>
 
     </header>
 
-    <main>
-        <section>
-            <h1>Checkout</h1>
-            <p>A beautiful optimized, cross devices payment form, with support for single click payments.</p>
-            <a href="explore checkout">Explore checkout</a>
-            <a href="documentation">Documentation</a>
+    <main class="container">
+        <section class="intro">
+            <h1 class="intro h1">Checkout</h1>
+            <p class="intro p">A beautiful optimized, cross devices payment form, with support for single click payments.</p>
+            <a href="explore checkout" class="button-blue" >Explore checkout</a>
+            <a href="documentation" class="button-border-white"  >Documentation</a>
         </section>
 
-        <section>
+        <section class>
             <img src="/images/iPhoneX_Light.png" alt="smartphone_light">
             <img src="/images/iPhoneX_Light_2.png" alt="smartphone_light2">
             <img src="/images/iPhoneX_Dark.png" alt="smartphone_dark">
         </section>
     </main>
 
-    <footer>
+    <footer class="container">
         <a href="index.html">
             <img src="/images/stripe-logo.png" alt="logo">
         </a>
