--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
     <main class="container">
         <section class="intro">
-            <h1 class="intro h1">Checkout</h1>
-            <p class="intro p">A beautiful optimized, cross devices payment form, with support for single click payments.</p>
+            <h1>Checkout</h1>
+            <p>A beautiful optimized, cross devices payment form, with support for single click payments.</p>
             <a href="explore checkout" class="button-blue" >Explore checkout</a>
             <a href="documentation" class="button-border-white"  >Documentation</a>
         </section>
 
-        <section class>
+        <section class="smartphones">
             <img src="/images/iPhoneX_Light.png" alt="smartphone_light">
             <img src="/images/iPhoneX_Light_2.png" alt="smartphone_light2">
             <img src="/images/iPhoneX_Dark.png" alt="smartphone_dark">
